--- a/soccer.html
+++ b/soccer.html
@@ -98,24 +98,49 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Fiorentina vs Pisa</a></td>
-<td>February 23, 2026 9:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 24, 2026 09:30:00 AM" data-start="February 23, 2026 09:30:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Atlético Madrid vs Club Brugge</a></td>
+<td>February 24, 2026 9:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 25, 2026 09:45:00 AM" data-start="February 24, 2026 09:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Bologna vs Udinese</a></td>
-<td>February 23, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 24, 2026 11:45:00 AM" data-start="February 23, 2026 11:45:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Bayer Leverkusen vs Olympiacos Piraeus</a></td>
+<td>February 24, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 25, 2026 12:00:00 PM" data-start="February 24, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Everton vs Manchester United</a></td>
-<td>February 23, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 24, 2026 12:00:00 PM" data-start="February 23, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Inter Milan vs Bodo Glimt</a></td>
+<td>February 24, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 25, 2026 12:00:00 PM" data-start="February 24, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Deportivo Alavés vs Girona</a></td>
-<td>February 23, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 24, 2026 12:00:00 PM" data-start="February 23, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Newcastle United vs Qarabağ</a></td>
+<td>February 24, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 25, 2026 12:00:00 PM" data-start="February 24, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Huachipato vs Carabobo</a></td>
+<td>February 24, 2026 2:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 25, 2026 02:00:00 PM" data-start="February 24, 2026 02:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Boca Juniors vs Gimnasia Chivilcoy</a></td>
+<td>February 24, 2026 4:15 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 25, 2026 04:15:00 PM" data-start="February 24, 2026 04:15:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Medellín vs Liverpool</a></td>
+<td>February 24, 2026 4:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 25, 2026 04:30:00 PM" data-start="February 24, 2026 04:30:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Nashville SC vs Atletico Ottawa</a></td>
+<td>February 24, 2026 5:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 25, 2026 05:00:00 PM" data-start="February 24, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Los Angeles FC vs Real Espana</a></td>
+<td>February 24, 2026 7:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 25, 2026 07:00:00 PM" data-start="February 24, 2026 07:00:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
