--- a/nba.html
+++ b/nba.html
@@ -143,42 +143,154 @@
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-1">
-         San Antonio Spurs vs Detroit Pistons
+         Philadelphia 76ers vs Indiana Pacers
         </a>
        </td>
        <td>
-        February 23, 2026 4:00 PM
+        February 24, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 24, 2026 4:00 PM:00" data-start="February 23, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="February 25, 2026 4:00 PM:00" data-start="February 24, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-2">
-         Sacramento Kings vs Memphis Grizzlies
+         Washington Wizards vs Atlanta Hawks
         </a>
        </td>
        <td>
-        February 23, 2026 5:00 PM
+        February 24, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 24, 2026 5:00 PM:00" data-start="February 23, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="February 25, 2026 4:30 PM:00" data-start="February 24, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-3">
-         Utah Jazz vs Houston Rockets
+         Dallas Mavericks vs Brooklyn Nets
         </a>
        </td>
        <td>
-        February 23, 2026 6:30 PM
+        February 24, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 24, 2026 6:30 PM:00" data-start="February 23, 2026 6:30 PM:00">
+        <span class="countdown-timer" data-end="February 25, 2026 4:30 PM:00" data-start="February 24, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-4">
+         Oklahoma City Thunder vs Toronto Raptors
+        </a>
+       </td>
+       <td>
+        February 24, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 25, 2026 4:30 PM:00" data-start="February 24, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-5">
+         New York Knicks vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        February 24, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 25, 2026 4:30 PM:00" data-start="February 24, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-6">
+         Charlotte Hornets vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        February 24, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 25, 2026 5:00 PM:00" data-start="February 24, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-7">
+         Miami Heat vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        February 24, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 25, 2026 5:00 PM:00" data-start="February 24, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-8">
+         Golden State Warriors vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        February 24, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 25, 2026 5:00 PM:00" data-start="February 24, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-9">
+         Boston Celtics vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        February 24, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 25, 2026 6:00 PM:00" data-start="February 24, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-10">
+         Minnesota Timberwolves vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        February 24, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 25, 2026 7:00 PM:00" data-start="February 24, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-11">
+         Orlando Magic vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        February 24, 2026 7:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 25, 2026 7:30 PM:00" data-start="February 24, 2026 7:30 PM:00">
         </span>
        </td>
       </tr>
