--- a/soccer-streams-3.html
+++ b/soccer-streams-3.html
@@ -101,9 +101,9 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
 	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('main.m3u8', '601'))">Stream 1</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('usa.m3u8', 'daffodil'))">Stream 2</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('mainalt.m3u8', '601'))">Stream 3</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tnt.m3u8', '601'))">Stream 1</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('golazo.m3u8', 'daffodil'))">Stream 2</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ppv3.m3u8', 'daffodil'))">Stream 3</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
@@ -121,7 +121,7 @@
 <script>
 var clapprPlayer;
 var domains = [];
-var subdomain = '601';  // Edit this per HTML file
+var subdomain = '601'  // Edit this per HTML file
 
 // Load domains from txt file
 fetch('domains.txt')
@@ -129,7 +129,7 @@ fetch('domains.txt')
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
     // Auto-load initial stream after domains load
-    setTimeout(() => showPlayer('clappr', getRandomStream('main.m3u8')), 500);
+    setTimeout(() => showPlayer('clappr', getRandomStream('tnt.m3u8')), 500);
   })
   .catch(() => {
     console.error('Failed to load domains.txt');
