--- a/soccer.html
+++ b/soccer.html
@@ -98,49 +98,84 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Atlético Madrid vs Club Brugge</a></td>
-<td>February 24, 2026 9:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 25, 2026 09:45:00 AM" data-start="February 24, 2026 09:45:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Atalanta vs Dortmund</a></td>
+<td>February 25, 2026 9:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 09:45:00 AM" data-start="February 25, 2026 09:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Bayer Leverkusen vs Olympiacos Piraeus</a></td>
-<td>February 24, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 25, 2026 12:00:00 PM" data-start="February 24, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Sheffield United vs Coventry City</a></td>
+<td>February 25, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 11:45:00 AM" data-start="February 25, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Inter Milan vs Bodo Glimt</a></td>
-<td>February 24, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 25, 2026 12:00:00 PM" data-start="February 24, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Juventus vs Galatasaray</a></td>
+<td>February 25, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 12:00:00 PM" data-start="February 25, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Newcastle United vs Qarabağ</a></td>
-<td>February 24, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 25, 2026 12:00:00 PM" data-start="February 24, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">PSG vs Monaco</a></td>
+<td>February 25, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 12:00:00 PM" data-start="February 25, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Huachipato vs Carabobo</a></td>
-<td>February 24, 2026 2:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 25, 2026 02:00:00 PM" data-start="February 24, 2026 02:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Real Madrid vs Benfica</a></td>
+<td>February 25, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 12:00:00 PM" data-start="February 25, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Boca Juniors vs Gimnasia Chivilcoy</a></td>
-<td>February 24, 2026 4:15 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 25, 2026 04:15:00 PM" data-start="February 24, 2026 04:15:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Stoke City vs Oxford United</a></td>
+<td>February 25, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 12:00:00 PM" data-start="February 25, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Medellín vs Liverpool</a></td>
-<td>February 24, 2026 4:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 25, 2026 04:30:00 PM" data-start="February 24, 2026 04:30:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Bahia vs O'Higgins</a></td>
+<td>February 25, 2026 2:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 02:00:00 PM" data-start="February 25, 2026 02:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Nashville SC vs Atletico Ottawa</a></td>
-<td>February 24, 2026 5:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 25, 2026 05:00:00 PM" data-start="February 24, 2026 05:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Remo vs Internacional</a></td>
+<td>February 25, 2026 2:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 02:00:00 PM" data-start="February 25, 2026 02:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Los Angeles FC vs Real Espana</a></td>
-<td>February 24, 2026 7:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 25, 2026 07:00:00 PM" data-start="February 24, 2026 07:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Coritiba vs Sao Paulo</a></td>
+<td>February 25, 2026 2:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 02:30:00 PM" data-start="February 25, 2026 02:30:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-10">Cincinnati vs Universidad O&amp;M</a></td>
+<td>February 25, 2026 4:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 04:00:00 PM" data-start="February 25, 2026 04:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Argentinos Juniors vs Barcelona SC</a></td>
+<td>February 25, 2026 4:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 04:30:00 PM" data-start="February 25, 2026 04:30:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-11">Grêmio vs Atletico Mineiro</a></td>
+<td>February 25, 2026 4:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 04:30:00 PM" data-start="February 25, 2026 04:30:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-12">Palmeiras vs Fluminense</a></td>
+<td>February 25, 2026 4:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 04:30:00 PM" data-start="February 25, 2026 04:30:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-13">Mexico vs Iceland</a></td>
+<td>February 25, 2026 6:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 06:00:00 PM" data-start="February 25, 2026 06:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-13">Vancouver Whitecaps vs Cartaginés</a></td>
+<td>February 25, 2026 6:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 06:30:00 PM" data-start="February 25, 2026 06:30:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-13">LA Galaxy vs San Miguelito</a></td>
+<td>February 25, 2026 8:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 08:30:00 PM" data-start="February 25, 2026 08:30:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
