--- a/nhl.html
+++ b/nhl.html
@@ -96,7 +96,50 @@
 </thead>
 <tbody>
         <tr>
-</tbody></table>
+
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Wednesday, February 25, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-1">Buffalo Sabres vs New Jersey Devils</a></td>
+            <td>February 25, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-26 16:00:00" data-start="2026-02-25 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-2">Philadelphia Flyers vs Washington Capitals</a></td>
+            <td>February 25, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-26 16:00:00" data-start="2026-02-25 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-3">Toronto Maple Leafs vs Tampa Bay Lightning</a></td>
+            <td>February 25, 2026 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-26 16:30:00" data-start="2026-02-25 16:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-4">Seattle Kraken vs Dallas Stars</a></td>
+            <td>February 25, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-26 17:00:00" data-start="2026-02-25 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-5">Colorado Avalanche vs Utah Mammoth</a></td>
+            <td>February 25, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-26 18:00:00" data-start="2026-02-25 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-6">Winnipeg Jets vs Vancouver Canucks</a></td>
+            <td>February 25, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-26 19:00:00" data-start="2026-02-25 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-7">Vegas Golden Knights vs Los Angeles Kings</a></td>
+            <td>February 25, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-26 19:00:00" data-start="2026-02-25 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-8">Edmonton Oilers vs Anaheim Ducks</a></td>
+            <td>February 25, 2026 07:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-26 19:30:00" data-start="2026-02-25 19:30:00"></span></td>
+        </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
