--- a/index.html
+++ b/index.html
@@ -220,23 +220,18 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/soccer">UEFA Champions League</a></td>
-<td>February 24, 2026 09:45 AM</td>
-<td><span class="countdown-timer" data-end="February 25, 2026 09:45:00 AM" data-start="February 24, 2026 09:45:00 AM"></span></td>
+<td>February 25, 2026 09:45 AM</td>
+<td><span class="countdown-timer" data-end="February 26, 2026 09:45:00 AM" data-start="February 25, 2026 09:45:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nba">NBA</a></td>
-<td>February 24, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="February 25, 2026 04:00:00 PM" data-start="February 24, 2026 04:00:00 PM"></span></td>
+<td>February 25, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="February 26, 2026 04:00:00 PM" data-start="February 25, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Copa Argentina</a></td>
-<td>February 24, 2026 4:15 PM</td>
-<td><span class="countdown-timer" data-end="February 25, 2026 04:15:00 PM" data-start="February 24, 2026 04:15:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE NXT</a></td>
-<td>February 24, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="February 25, 2026 05:00:00 PM" data-start="February 24, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/aew">AEW</a></td>
+<td>February 25, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 26, 2026 05:00:00 PM" data-start="February 25, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tbody>
