--- a/mlb.html
+++ b/mlb.html
@@ -143,98 +143,83 @@
       <tr>
        <td>
         <a href="https://roxiestreams.info/mlb-streams-1">
-         Tampa Bay Rays vs Baltimore Orioles
+         Detroit Tigers vs Baltimore Orioles
         </a>
        </td>
        <td>
-        February 25, 2026 10:05 AM
+        February 26, 2026 10:05 AM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 25, 2026 22:05:00" data-start="February 25, 2026 10:05:00">
+        <span class="countdown-timer" data-end="February 26, 2026 22:05:00" data-start="February 26, 2026 10:05:00">
         </span>
        </td>
       </tr>
-      <tr>
        <td>
         <a href="https://roxiestreams.info/mlb-streams-2">
-         Boston Red Sox vs Minnesota Twins
+         Minnesota Twins vs Pittsburgh Pirates
         </a>
        </td>
        <td>
-        February 25, 2026 10:05 AM
+        February 26, 2026 10:05 AM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 25, 2026 22:05:00" data-start="February 25, 2026 10:05:00">
+        <span class="countdown-timer" data-end="February 26, 2026 22:05:00" data-start="February 26, 2026 10:05:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/mlb-streams-3">
-         Detroit Tigers vs Philadelphia Phillies
+         Atlanta Braves vs New York Yankees
         </a>
        </td>
        <td>
-        February 25, 2026 10:05 AM
+        February 26, 2026 10:05 AM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 25, 2026 22:05:00" data-start="February 25, 2026 10:05:00">
+        <span class="countdown-timer" data-end="February 26, 2026 22:05:00" data-start="February 26, 2026 10:05:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/mlb-streams-4">
-         St. Louis Cardinals vs New York Mets
+         Miami Marlins vs Toronto Blue Jays
         </a>
        </td>
        <td>
-        February 25, 2026 10:10 AM
+        February 26, 2026 10:07 AM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 25, 2026 22:10:00" data-start="February 25, 2026 10:10:00">
+        <span class="countdown-timer" data-end="February 26, 2026 22:07:00" data-start="February 26, 2026 10:07:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/mlb-streams-5">
-         Los Angeles Dodgers vs Arizona Diamondbacks
+         Chicago White Sox vs Los Angeles Dodgers
         </a>
        </td>
        <td>
-        February 25, 2026 12:10 PM
+        February 26, 2026 12:05 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 26, 2026 00:10:00" data-start="February 25, 2026 12:10:00">
+        <span class="countdown-timer" data-end="February 27, 2026 00:05:00" data-start="February 26, 2026 12:05:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/mlb-streams-6">
-         Los Angeles Angels vs San Diego Padres
+         Cleveland Guardians vs Seattle Mariners
         </a>
        </td>
        <td>
-        February 25, 2026 12:10 PM
+        February 26, 2026 12:10 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 26, 2026 00:10:00" data-start="February 25, 2026 12:10:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.info/mlb-streams-7">
-         Washington Nationals vs New York Yankees
-        </a>
-       </td>
-       <td>
-        February 25, 2026 03:35 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="February 26, 2026 03:35:00" data-start="February 25, 2026 15:35:00">
+        <span class="countdown-timer" data-end="February 27, 2026 00:10:00" data-start="February 26, 2026 12:10:00">
         </span>
        </td>
       </tr>
