--- a/nhl.html
+++ b/nhl.html
@@ -98,47 +98,64 @@
         <tr>
 
         <tr style="background-color: #333; color: white;">
-            <td colspan="3"><strong>Wednesday, February 25, 2026</strong></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-1">Columbus Blue Jackets vs Boston Bruins</a></td>
+            <td>February 26, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-27 16:00:00" data-start="2026-02-26 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-1">Buffalo Sabres vs New Jersey Devils</a></td>
-            <td>February 25, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-26 16:00:00" data-start="2026-02-25 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-2">New York Islanders vs Montreal Canadiens</a></td>
+            <td>February 26, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-27 16:00:00" data-start="2026-02-26 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-2">Philadelphia Flyers vs Washington Capitals</a></td>
-            <td>February 25, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-26 16:00:00" data-start="2026-02-25 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-3">Detroit Red Wings vs Ottawa Senators</a></td>
+            <td>February 26, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-27 16:00:00" data-start="2026-02-26 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-3">Toronto Maple Leafs vs Tampa Bay Lightning</a></td>
-            <td>February 25, 2026 04:30 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-26 16:30:00" data-start="2026-02-25 16:30:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-4">Toronto Maple Leafs vs Florida Panthers</a></td>
+            <td>February 26, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-27 16:00:00" data-start="2026-02-26 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-4">Seattle Kraken vs Dallas Stars</a></td>
-            <td>February 25, 2026 05:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-26 17:00:00" data-start="2026-02-25 17:00:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-5">New Jersey Devils vs Pittsburgh Penguins</a></td>
+            <td>February 26, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-27 16:00:00" data-start="2026-02-26 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-5">Colorado Avalanche vs Utah Mammoth</a></td>
-            <td>February 25, 2026 06:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-26 18:00:00" data-start="2026-02-25 18:00:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-6">Tampa Bay Lightning vs Carolina Hurricanes</a></td>
+            <td>February 26, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-27 16:00:00" data-start="2026-02-26 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-6">Winnipeg Jets vs Vancouver Canucks</a></td>
-            <td>February 25, 2026 07:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-26 19:00:00" data-start="2026-02-25 19:00:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-7">Philadelphia Flyers vs New York Rangers</a></td>
+            <td>February 26, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-27 17:00:00" data-start="2026-02-26 17:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-7">Vegas Golden Knights vs Los Angeles Kings</a></td>
-            <td>February 25, 2026 07:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-26 19:00:00" data-start="2026-02-25 19:00:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-8">Seattle Kraken vs St. Louis Blues</a></td>
+            <td>February 26, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-27 17:00:00" data-start="2026-02-26 17:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-8">Edmonton Oilers vs Anaheim Ducks</a></td>
-            <td>February 25, 2026 07:30 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-26 19:30:00" data-start="2026-02-25 19:30:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-9">Chicago Blackhawks vs Nashville Predators</a></td>
+            <td>February 26, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-27 17:00:00" data-start="2026-02-26 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-10">Minnesota Wild vs Colorado Avalanche</a></td>
+            <td>February 26, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-27 18:00:00" data-start="2026-02-26 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-11">Calgary Flames vs San Jose Sharks</a></td>
+            <td>February 26, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-27 19:00:00" data-start="2026-02-26 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-12">Edmonton Oilers vs Los Angeles Kings</a></td>
+            <td>February 26, 2026 07:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-27 19:30:00" data-start="2026-02-26 19:30:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
