--- a/nba.html
+++ b/nba.html
@@ -143,84 +143,140 @@
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-1">
-         Oklahoma City Thunder vs Detroit Pistons
+         Charlotte Hornets vs Indiana Pacers
         </a>
        </td>
        <td>
-        February 25, 2026 4:30 PM
+        February 26, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 26, 2026 4:30 PM:00" data-start="February 25, 2026 4:30 PM:00">
+        <span class="countdown-timer" data-end="February 27, 2026 4:00 PM:00" data-start="February 26, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-2">
-         San Antonio Spurs vs Toronto Raptors
+         Miami Heat vs Philadelphia 76ers
         </a>
        </td>
        <td>
-        February 25, 2026 4:30 PM
+        February 26, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 26, 2026 4:30 PM:00" data-start="February 25, 2026 4:30 PM:00">
+        <span class="countdown-timer" data-end="February 27, 2026 4:00 PM:00" data-start="February 26, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-3">
-         Golden State Warriors vs Memphis Grizzlies
+         Washington Wizards vs Atlanta Hawks
         </a>
        </td>
        <td>
-        February 25, 2026 4:30 PM
+        February 26, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 26, 2026 4:30 PM:00" data-start="February 25, 2026 4:30 PM:00">
+        <span class="countdown-timer" data-end="February 27, 2026 4:30 PM:00" data-start="February 26, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-4">
-         Sacramento Kings vs Houston Rockets
+         San Antonio Spurs vs Brooklyn Nets
         </a>
        </td>
        <td>
-        February 25, 2026 5:00 PM
+        February 26, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 26, 2026 5:00 PM:00" data-start="February 25, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="February 27, 2026 4:30 PM:00" data-start="February 26, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-5">
-         Cleveland Cavaliers vs Milwaukee Bucks
+         Houston Rockets vs Orlando Magic
         </a>
        </td>
        <td>
-        February 25, 2026 5:00 PM
+        February 26, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 26, 2026 5:00 PM:00" data-start="February 25, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="February 27, 2026 4:30 PM:00" data-start="February 26, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-6">
-         Boston Celtics vs Denver Nuggets
+         Portland Trail Blazers vs Chicago Bulls
         </a>
        </td>
        <td>
-        February 25, 2026 7:00 PM
+        February 26, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 26, 2026 7:00 PM:00" data-start="February 25, 2026 7:00 PM:00">
+        <span class="countdown-timer" data-end="February 27, 2026 5:00 PM:00" data-start="February 26, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-7">
+         Sacramento Kings vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        February 26, 2026 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 27, 2026 5:30 PM:00" data-start="February 26, 2026 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-8">
+         Los Angeles Lakers vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        February 26, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 27, 2026 6:00 PM:00" data-start="February 26, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-9">
+         New Orleans Pelicans vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        February 26, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 27, 2026 6:00 PM:00" data-start="February 26, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-10">
+         Minnesota Timberwolves vs Los Angeles Clippers
+        </a>
+       </td>
+       <td>
+        February 26, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 27, 2026 7:00 PM:00" data-start="February 26, 2026 7:00 PM:00">
         </span>
        </td>
       </tr>
