--- a/soccer.html
+++ b/soccer.html
@@ -98,84 +98,59 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Atalanta vs Dortmund</a></td>
-<td>February 25, 2026 9:45 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Crvena Zvezda vs Lille</a></td>
+<td>February 26, 2026 9:45 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 26, 2026 09:45:00 AM" data-start="February 25, 2026 09:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Sheffield United vs Coventry City</a></td>
-<td>February 25, 2026 11:45 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Viktoria Plzeň vs Panathinaikos</a></td>
+<td>February 26, 2026 9:45 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 26, 2026 11:45:00 AM" data-start="February 25, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Juventus vs Galatasaray</a></td>
-<td>February 25, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Stuttgart vs Celtic</a></td>
+<td>February 26, 2026 9:45 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 26, 2026 12:00:00 PM" data-start="February 25, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">PSG vs Monaco</a></td>
-<td>February 25, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Bologna vs Brann</a></td>
+<td>February 26, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 26, 2026 12:00:00 PM" data-start="February 25, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Real Madrid vs Benfica</a></td>
-<td>February 25, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Crystal Palace vs Zrinjski</a></td>
+<td>February 26, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 26, 2026 12:00:00 PM" data-start="February 25, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Stoke City vs Oxford United</a></td>
-<td>February 25, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Nottingham Forest vs Fenerbahçe</a></td>
+<td>February 26, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 26, 2026 12:00:00 PM" data-start="February 25, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Bahia vs O'Higgins</a></td>
-<td>February 25, 2026 2:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Santos vs Vasco Da Gama</a></td>
+<td>February 26, 2026 2:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 26, 2026 12:00:00 PM" data-start="February 25, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">River Plate vs Banfield</a></td>
+<td>February 26, 2026 2:30 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 26, 2026 02:00:00 PM" data-start="February 25, 2026 02:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Remo vs Internacional</a></td>
-<td>February 25, 2026 2:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Philadelphia Union vs Defence Force</a></td>
+<td>February 26, 2026 4:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 26, 2026 02:00:00 PM" data-start="February 25, 2026 02:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Coritiba vs Sao Paulo</a></td>
-<td>February 25, 2026 2:30 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-10">Deportes Tolima vs Deportivo Tachira</a></td>
+<td>February 26, 2026 4:30 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 26, 2026 02:30:00 PM" data-start="February 25, 2026 02:30:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-10">Cincinnati vs Universidad O&amp;M</a></td>
-<td>February 25, 2026 4:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-11">Independiente Del Valle vs Inter Miami</a></td>
+<td>February 26, 2026 5:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 26, 2026 04:00:00 PM" data-start="February 25, 2026 04:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Argentinos Juniors vs Barcelona SC</a></td>
-<td>February 25, 2026 4:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 26, 2026 04:30:00 PM" data-start="February 25, 2026 04:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-11">Grêmio vs Atletico Mineiro</a></td>
-<td>February 25, 2026 4:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 26, 2026 04:30:00 PM" data-start="February 25, 2026 04:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-12">Palmeiras vs Fluminense</a></td>
-<td>February 25, 2026 4:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 26, 2026 04:30:00 PM" data-start="February 25, 2026 04:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-13">Mexico vs Iceland</a></td>
-<td>February 25, 2026 6:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 26, 2026 06:00:00 PM" data-start="February 25, 2026 06:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-13">Vancouver Whitecaps vs Cartaginés</a></td>
-<td>February 25, 2026 6:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 26, 2026 06:30:00 PM" data-start="February 25, 2026 06:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-13">LA Galaxy vs San Miguelito</a></td>
-<td>February 25, 2026 8:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 26, 2026 08:30:00 PM" data-start="February 25, 2026 08:30:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
