--- a/nba.html
+++ b/nba.html
@@ -282,6 +282,96 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for February 27, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-1">
+         Cleveland Cavaliers vs Detroit Pistons
+        </a>
+       </td>
+       <td>
+        February 27, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 28, 2026 4:00 PM:00" data-start="February 27, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-2">
+         Brooklyn Nets vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        February 27, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 28, 2026 4:30 PM:00" data-start="February 27, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-3">
+         New York Knicks vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        February 27, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 28, 2026 5:00 PM:00" data-start="February 27, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-4">
+         Memphis Grizzlies vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        February 27, 2026 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 28, 2026 5:30 PM:00" data-start="February 27, 2026 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-5">
+         Denver Nuggets vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        February 27, 2026 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 28, 2026 6:30 PM:00" data-start="February 27, 2026 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
