--- a/nhl.html
+++ b/nhl.html
@@ -156,6 +156,29 @@
             <td><a href="https://roxiestreams.info/nhl-streams-12">Edmonton Oilers vs Los Angeles Kings</a></td>
             <td>February 26, 2026 07:30 PM</td>
             <td><span class="countdown-timer" data-end="2026-02-27 19:30:00" data-start="2026-02-26 19:30:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Friday, February 27, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-1">Buffalo Sabres vs Florida Panthers</a></td>
+            <td>February 27, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-28 16:00:00" data-start="2026-02-27 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-2">Vegas Golden Knights vs Washington Capitals</a></td>
+            <td>February 27, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-28 16:00:00" data-start="2026-02-27 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-3">Minnesota Wild vs Utah Mammoth</a></td>
+            <td>February 27, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-28 18:00:00" data-start="2026-02-27 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-4">Winnipeg Jets vs Anaheim Ducks</a></td>
+            <td>February 27, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-28 19:00:00" data-start="2026-02-27 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
