--- a/soccer.html
+++ b/soccer.html
@@ -98,36 +98,6 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Crvena Zvezda vs Lille</a></td>
-<td>February 26, 2026 9:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 27, 2026 09:45:00 AM" data-start="February 26, 2026 09:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Viktoria Plzeň vs Panathinaikos</a></td>
-<td>February 26, 2026 9:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 27, 2026 09:45:00 AM" data-start="February 26, 2026 09:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Stuttgart vs Celtic</a></td>
-<td>February 26, 2026 9:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 27, 2026 09:45:00 AM" data-start="February 26, 2026 09:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Bologna vs Brann</a></td>
-<td>February 26, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 27, 2026 12:00:00 PM" data-start="February 26, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Crystal Palace vs Zrinjski</a></td>
-<td>February 26, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 27, 2026 12:00:00 PM" data-start="February 26, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Nottingham Forest vs Fenerbahçe</a></td>
-<td>February 26, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 27, 2026 12:00:00 PM" data-start="February 26, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.info/soccer-streams-7">Santos vs Vasco Da Gama</a></td>
 <td>February 26, 2026 2:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 27, 2026 02:00:00 PM" data-start="February 26, 2026 02:00:00 PM" span=""></span></td>
@@ -151,6 +121,56 @@
 <td><a href="https://roxiestreams.info/soccer-streams-11">Independiente Del Valle vs Inter Miami</a></td>
 <td>February 26, 2026 5:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 27, 2026 05:00:00 PM" data-start="February 26, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-1">UEFA Europa League Draw</a></td>
+<td>February 27, 2026 3:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 28, 2026 03:00:00 AM" data-start="February 27, 2026 03:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Augsburg vs Köln</a></td>
+<td>February 27, 2026 11:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 28, 2026 11:30:00 AM" data-start="February 27, 2026 11:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Strasbourg vs Lens</a></td>
+<td>February 27, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 28, 2026 11:45:00 AM" data-start="February 27, 2026 11:45:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Wolves vs Aston Villa</a></td>
+<td>February 27, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 28, 2026 12:00:00 PM" data-start="February 27, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Levante vs Deportivo Alavés</a></td>
+<td>February 27, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 28, 2026 12:00:00 PM" data-start="February 27, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Bristol City vs Watford</a></td>
+<td>February 27, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 28, 2026 12:00:00 PM" data-start="February 27, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Mazatlán vs Pachuca</a></td>
+<td>February 27, 2026 5:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 28, 2026 05:00:00 PM" data-start="February 27, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Querétaro vs Santos Laguna</a></td>
+<td>February 27, 2026 5:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 28, 2026 05:00:00 PM" data-start="February 27, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Juárez vs Atlas</a></td>
+<td>February 27, 2026 7:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 28, 2026 07:00:00 PM" data-start="February 27, 2026 07:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Tijuana vs Pumas UNAM</a></td>
+<td>February 27, 2026 7:06 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 28, 2026 07:06:00 PM" data-start="February 27, 2026 07:06:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
