--- a/mlb.html
+++ b/mlb.html
@@ -177,6 +177,12 @@
         February 27, 2026 10:05 AM
        </td>
        <td>
+        <span class="countdown-timer" data-end="February 27, 2026 22:05:00" data-start="February 27, 2026 10:05:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
         <a href="https://roxiestreams.info/mlb-streams-5">
          Los Angeles Dodgers vs San Francisco Giants
         </a>
@@ -185,7 +191,7 @@
         February 27, 2026 12:05 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 28, 2026 00:05:00" data-start="February 27, 2026 12:05:00">
+        <span class="countdown-timer" data-end="February 27, 2026 22:05:00" data-start="February 27, 2026 12:05:00">
         </span>
        </td>
       </tr>
